--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,6 +20,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-  <script type='text/javascript' src="%PUBLIC_URL%/js/saloniq.js"></script>
+  <script type='text/javascript' src="%PUBLIC_URL%/static/js/saloniq.js"></script>
 </body>
 </html>
